# mrCAD

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
agents/: editing_actions.py  gpt4_agents.py  merge_lora_weights.py  monkey_patch_forward.py  prompts.py  replay_agents.py  run_maker_evaluation.py  run_validation.py  train.py  trainer.py  utils.py  vlm_agents.py
agents/qwen_training_configs/: actions_all.yaml  actions_verified.yaml  deepspeed_config.yaml  design_all.yaml  design_verified.yaml  drawing-only_actions_all.yaml  text-only_actions_all.yaml
agents/training/: collator.py  train.py  utils.py
experiments/: analyze-language.ipynb  data_conversion_utils.py  execution_utils.py  process-dataframe.ipynb  run_maker_evaluation.py  test-replay.ipynb
experiments/qwen_training_configs/: actions_all.yaml  drawing-only_actions_all.yaml  text-only_actions_all.yaml
mrcad/: __init__.py  action.py  agents.py  coordinator.py  design.py  editing_actions.py  env.py  env_utils.py  render_utils.py  rewards.py  visualize.py
notebooks/: distance-metrics.ipynb  gpt4-playground.ipynb  reference_metric.py  render-strokes.ipynb
tests/: test_design_model.py  test_replay_agents.py
tests/test_data/: test_design_pool.jsonl  test_design_pool_rounded.jsonl
